// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword should not successfully login 1`] = `
<div
  class="css-1t57a7l"
>
  <div
    class="chakra-form-control css-0"
    role="group"
  >
    <label
      class="chakra-form__label css-uvho5g"
      for="field-1"
      id="field-1-label"
    >
      Email
    </label>
    <input
      class="chakra-input css-0"
      data-testid="login-email"
      id="field-1"
      placeholder="Email"
      type="email"
    />
  </div>
  <div
    class="chakra-form-control css-0"
    role="group"
  >
    <label
      class="chakra-form__label css-uvho5g"
      for="field-2"
      id="field-2-label"
    >
      Password
    </label>
    <input
      class="chakra-input css-0"
      data-testid="login-password"
      id="field-2"
      placeholder="Password"
      type="password"
    />
  </div>
  <button
    class="chakra-button css-1qgagya"
    data-testid="forgot-password-btn"
    type="button"
  >
    Forgot Password?
  </button>
  <div
    class="css-g89h0y"
  >
    <div
      class="chakra-alert css-1hwd9xd"
      data-testid="alert-error"
      role="alert"
    >
      <span
        class="chakra-alert__icon css-1c6vscd"
      >
        <svg
          class="chakra-icon css-fi0ww0"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        class="chakra-alert__title css-1qkvt8e"
        data-testid="alert-message"
      >
        Error!!!
      </div>
      <button
        aria-label="Close"
        class="css-1mduyzg"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-onkibi"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="chakra-button css-1twjws8"
    data-testid="sign-in-btn"
    type="submit"
  >
    Sign In
  </button>
</div>
`;

exports[`ForgotPassword should unsuccessfully send the reset email in ForgotPassword 1`] = `
<div
  class="css-1t8zqkj"
>
  <div
    class="css-15sedz4"
  >
    <p
      class="chakra-text css-13gk006"
    >
      Forgot Your Password?
    </p>
    <div
      class="css-ebxf5s"
    >
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <label
          class="chakra-form__label css-uvho5g"
          for="field-6"
          id="field-6-label"
        >
          Enter your email
        </label>
        <input
          class="chakra-input css-0"
          data-testid="forgot-email"
          id="field-6"
          placeholder="Email"
          type="email"
        />
      </div>
    </div>
    <div
      class="css-g89h0y"
    >
      <div
        class="chakra-alert css-1hwd9xd"
        data-testid="error"
        role="alert"
      >
        <span
          class="chakra-alert__icon css-1c6vscd"
        >
          <svg
            class="chakra-icon css-fi0ww0"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.983,0a12.206,12.206,0,0,0-8.51,3.653A11.8,11.8,0,0,0,0,12.207,11.779,11.779,0,0,0,11.8,24h.214A12.111,12.111,0,0,0,24,11.791h0A11.766,11.766,0,0,0,11.983,0ZM10.5,16.542a1.476,1.476,0,0,1,1.449-1.53h.027a1.527,1.527,0,0,1,1.523,1.47,1.475,1.475,0,0,1-1.449,1.53h-.027A1.529,1.529,0,0,1,10.5,16.542ZM11,12.5v-6a1,1,0,0,1,2,0v6a1,1,0,1,1-2,0Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          class="chakra-alert__title css-1qkvt8e"
          data-testid="error-message"
        >
          Error!!!
        </div>
        <button
          aria-label="Close"
          class="css-1mduyzg"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-onkibi"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="css-1958zak"
    >
      <button
        class="chakra-button css-1fibvam"
        type="submit"
      >
         
        Reset
         
      </button>
    </div>
  </div>
</div>
`;
